z-Index fix

--- a/css/sortCss.css
+++ b/css/sortCss.css
@@ -95,7 +95,7 @@ z-index: 1;
 -webkit-box-shadow: 0px 2px 10px rgba(0,0,0,.7);
 -moz-box-shadow: 0px 2px 10px rgba(0,0,0,.7);
 box-shadow: 0px 2px 10px rgba(0,0,0,.7);
-z-index: 5;
+
 }
 
 
